# atelier-code

./: .gitignore  AGENTS.md  GOAL.md  PLAN.md  README.md  SPEC.md  UI_REF.md  package.json  vite.config.ts
docs/: agent-targets.md  index.md  project-brief.md  quality.md  release-checklist.md  smoke-v1.md
docs/architecture/: index.md
docs/exec-plans/active/: 2026-05-12-phase-1-domain-store.md  2026-05-12-phases-4-8-orchestrator.md  2026-05-12-phases-9-12-release.md
docs/exec-plans/completed/: 2026-05-12-dark-glassmorphism-ui.md  2026-05-12-phase-2-workflow-config.md  2026-05-12-phase-3-workspace-git-safety.md  2026-05-12-phases-4-8-orchestrator.md  2026-05-12-phases-9-12-release.md
scripts/: smoke-v1.sh
src/: README.md  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/daemon/: main.ts
src/daemon/api/: index.test.ts  index.ts
src/daemon/observability/: index.test.ts  index.ts
src/daemon/orchestration/: index.test.ts  index.ts
src/daemon/pr-packet/: index.test.ts  index.ts
src/daemon/runner/: index.test.ts  index.ts
src/daemon/scheduler/: index.test.ts  index.ts
src/daemon/sonata/: index.test.ts  index.ts
src/daemon/store/: index.test.ts  index.ts
src/daemon/store/migrations/: 0001_bootstrap.sql  0002_domain_store.sql
src/daemon/workflow/: index.test.ts  index.ts
src/daemon/workspace/: index.test.ts  index.ts
src/shared/: contracts.ts
src/ui/: App.tsx  styles.css
