[package]
name = "atelier"
version = "0.1.0"
description = "Local-first Sonata Orchestrator desktop app"
authors = ["Atelier"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

